--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,14 @@
             <artifactId>commons-lang3</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
         <!--        <dependency>-->
 <!--            <groupId>org.projectlombok</groupId>-->
